@@ -314,6 +314,8 @@ BUG FIXES
     o	plot(1:3, exp(1:3), log = "y", ylim = c(30,1)) {reversed log-scale axis}
 	now works, based on Uwe Ligges' suggestions.  (PR#7894)
 
+    o	install.packages() was aborting when a package in a bundle was chosen.
+
 
 
 		CHANGES IN R VERSION 2.1.0
